openexr-sys/openexr-c/include/imath_vec.h

typedef struct Imath_3_0__Vec2_long__t_s {
    long x;
    long y;
} OPENEXR_ALIGN(8) Imath_3_0__Vec2_long__t;
typedef Imath_3_0__Vec2_long__t Imath_V2i64_t;
typedef struct Imath_3_0__Vec2_float__t_s {
    float x;
    float y;
} OPENEXR_ALIGN(4) Imath_3_0__Vec2_float__t;
typedef Imath_3_0__Vec2_float__t Imath_V2f_t;
typedef struct Imath_3_0__Vec2_double__t_s {
    double x;
    double y;
} OPENEXR_ALIGN(8) Imath_3_0__Vec2_double__t;
typedef Imath_3_0__Vec2_double__t Imath_V2d_t;
typedef struct Imath_3_0__Vec3_short__t_s {
    short x;
    short y;
    short z;
} OPENEXR_ALIGN(2) Imath_3_0__Vec3_short__t;
typedef Imath_3_0__Vec3_short__t Imath_V3s_t;
OPENEXR_API unsigned int Imath_3_0__Vec2_long___op_mul_1(
    Imath_V2i64_t const * this_
    , Imath_V2i64_t * return_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec2_long___op_idiv(
    Imath_V2i64_t * this_
    , Imath_V2i64_t const * * return_
    , Imath_V2i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_long___op_idiv_1(
    Imath_V2i64_t * this_
    , Imath_V2i64_t const * * return_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec2_long___op_div(
    Imath_V2i64_t const * this_
    , Imath_V2i64_t * return_
    , Imath_V2i64_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_long___op_div_1(
    Imath_V2i64_t const * this_
    , Imath_V2i64_t * return_
    , long a);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__length2(
    Imath_V2i64_t const * this_
    , long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__baseTypeLowest(
    long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__baseTypeMax(
    long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__baseTypeSmallest(
    long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__baseTypeEpsilon(
    long * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_long__dimensions(
    unsigned int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__index(
    Imath_V2f_t * this_
    , float * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__index_const(
    Imath_V2f_t const * this_
    , float const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__broadcast(
    Imath_V2f_t * this_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__ctor(
    Imath_V2f_t * this_
    , float a
    , float b);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__ctor_1(
    Imath_V2f_t * this_
    , Imath_V2f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_float___assign(
    Imath_V2f_t * this_
    , Imath_V2f_t const * * return_
    , Imath_V2f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__dtor(
    Imath_V2f_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__equalWithAbsError(
    Imath_V2f_t const * this_
    , _Bool * return_
    , Imath_V2f_t const * v
    , float e);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__equalWithRelError(
    Imath_V2f_t const * this_
    , _Bool * return_
    , Imath_V2f_t const * v
    , float e);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__dot(
    Imath_V2f_t const * this_
    , float * return_
    , Imath_V2f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__cross(
    Imath_V2f_t const * this_
    , float * return_
    , Imath_V2f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_float___op_iadd(
    Imath_V2f_t * this_
    , Imath_V2f_t const * * return_
    , Imath_V2f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_float___op_add(
    Imath_V2f_t const * this_
    , Imath_V2f_t * return_
    , Imath_V2f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_float___op_isub(
    Imath_V2f_t * this_
    , Imath_V2f_t const * * return_
    , Imath_V2f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_float___op_sub(
    Imath_V2f_t const * this_
    , Imath_V2f_t * return_
    , Imath_V2f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_float___op_sub_1(
    Imath_V2f_t const * this_
    , Imath_V2f_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__negate(
    Imath_V2f_t * this_
    , Imath_V2f_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float___op_imul(
    Imath_V2f_t * this_
    , Imath_V2f_t const * * return_
    , Imath_V2f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_float___op_imul_1(
    Imath_V2f_t * this_
    , Imath_V2f_t const * * return_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec2_float___op_mul(
    Imath_V2f_t const * this_
    , Imath_V2f_t * return_
    , Imath_V2f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_float___op_mul_1(
    Imath_V2f_t const * this_
    , Imath_V2f_t * return_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec2_float___op_idiv(
    Imath_V2f_t * this_
    , Imath_V2f_t const * * return_
    , Imath_V2f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_float___op_idiv_1(
    Imath_V2f_t * this_
    , Imath_V2f_t const * * return_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec2_float___op_div(
    Imath_V2f_t const * this_
    , Imath_V2f_t * return_
    , Imath_V2f_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_float___op_div_1(
    Imath_V2f_t const * this_
    , Imath_V2f_t * return_
    , float a);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__length(
    Imath_V2f_t const * this_
    , float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__length2(
    Imath_V2f_t const * this_
    , float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__normalize(
    Imath_V2f_t * this_
    , Imath_V2f_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__normalizeExc(
    Imath_V2f_t * this_
    , Imath_V2f_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__normalizeNonNull(
    Imath_V2f_t * this_
    , Imath_V2f_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__normalized(
    Imath_V2f_t const * this_
    , Imath_V2f_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__normalizedExc(
    Imath_V2f_t const * this_
    , Imath_V2f_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__normalizedNonNull(
    Imath_V2f_t const * this_
    , Imath_V2f_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__baseTypeLowest(
    float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__baseTypeMax(
    float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__baseTypeSmallest(
    float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__baseTypeEpsilon(
    float * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_float__dimensions(
    unsigned int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__index(
    Imath_V2d_t * this_
    , double * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__index_const(
    Imath_V2d_t const * this_
    , double const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__broadcast(
    Imath_V2d_t * this_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__ctor(
    Imath_V2d_t * this_
    , double a
    , double b);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__ctor_1(
    Imath_V2d_t * this_
    , Imath_V2d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_double___assign(
    Imath_V2d_t * this_
    , Imath_V2d_t const * * return_
    , Imath_V2d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__dtor(
    Imath_V2d_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__equalWithAbsError(
    Imath_V2d_t const * this_
    , _Bool * return_
    , Imath_V2d_t const * v
    , double e);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__equalWithRelError(
    Imath_V2d_t const * this_
    , _Bool * return_
    , Imath_V2d_t const * v
    , double e);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__dot(
    Imath_V2d_t const * this_
    , double * return_
    , Imath_V2d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__cross(
    Imath_V2d_t const * this_
    , double * return_
    , Imath_V2d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_double___op_iadd(
    Imath_V2d_t * this_
    , Imath_V2d_t const * * return_
    , Imath_V2d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_double___op_add(
    Imath_V2d_t const * this_
    , Imath_V2d_t * return_
    , Imath_V2d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_double___op_isub(
    Imath_V2d_t * this_
    , Imath_V2d_t const * * return_
    , Imath_V2d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_double___op_sub(
    Imath_V2d_t const * this_
    , Imath_V2d_t * return_
    , Imath_V2d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_double___op_sub_1(
    Imath_V2d_t const * this_
    , Imath_V2d_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__negate(
    Imath_V2d_t * this_
    , Imath_V2d_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double___op_imul(
    Imath_V2d_t * this_
    , Imath_V2d_t const * * return_
    , Imath_V2d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_double___op_imul_1(
    Imath_V2d_t * this_
    , Imath_V2d_t const * * return_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec2_double___op_mul(
    Imath_V2d_t const * this_
    , Imath_V2d_t * return_
    , Imath_V2d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_double___op_mul_1(
    Imath_V2d_t const * this_
    , Imath_V2d_t * return_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec2_double___op_idiv(
    Imath_V2d_t * this_
    , Imath_V2d_t const * * return_
    , Imath_V2d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_double___op_idiv_1(
    Imath_V2d_t * this_
    , Imath_V2d_t const * * return_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec2_double___op_div(
    Imath_V2d_t const * this_
    , Imath_V2d_t * return_
    , Imath_V2d_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec2_double___op_div_1(
    Imath_V2d_t const * this_
    , Imath_V2d_t * return_
    , double a);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__length(
    Imath_V2d_t const * this_
    , double * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__length2(
    Imath_V2d_t const * this_
    , double * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__normalize(
    Imath_V2d_t * this_
    , Imath_V2d_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__normalizeExc(
    Imath_V2d_t * this_
    , Imath_V2d_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__normalizeNonNull(
    Imath_V2d_t * this_
    , Imath_V2d_t const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__normalized(
    Imath_V2d_t const * this_
    , Imath_V2d_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__normalizedExc(
    Imath_V2d_t const * this_
    , Imath_V2d_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__normalizedNonNull(
    Imath_V2d_t const * this_
    , Imath_V2d_t * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__baseTypeLowest(
    double * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__baseTypeMax(
    double * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__baseTypeSmallest(
    double * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__baseTypeEpsilon(
    double * return_);
OPENEXR_API unsigned int Imath_3_0__Vec2_double__dimensions(
    unsigned int * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__index(
    Imath_V3s_t * this_
    , short * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__index_const(
    Imath_V3s_t const * this_
    , short const * * return_
    , int i);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__ctor(
    Imath_V3s_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__ctor_1(
    Imath_V3s_t * this_
    , short a);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__ctor_2(
    Imath_V3s_t * this_
    , short a
    , short b
    , short c);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__ctor_3(
    Imath_V3s_t * this_
    , Imath_V3s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_short___assign(
    Imath_V3s_t * this_
    , Imath_V3s_t const * * return_
    , Imath_V3s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__dtor(
    Imath_V3s_t * this_);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__getValue(
    Imath_V3s_t * this_
    , short * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__getValue_1(
    Imath_V3s_t const * this_
    , short const * * return_);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__equalWithAbsError(
    Imath_V3s_t const * this_
    , _Bool * return_
    , Imath_V3s_t const * v
    , short e);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__equalWithRelError(
    Imath_V3s_t const * this_
    , _Bool * return_
    , Imath_V3s_t const * v
    , short e);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__dot(
    Imath_V3s_t const * this_
    , short * return_
    , Imath_V3s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_short__cross(
    Imath_V3s_t const * this_
    , Imath_V3s_t * return_
    , Imath_V3s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_short___op_iadd(
    Imath_V3s_t * this_
    , Imath_V3s_t const * * return_
    , Imath_V3s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_short___op_add(
    Imath_V3s_t const * this_
    , Imath_V3s_t * return_
    , Imath_V3s_t const * v);
OPENEXR_API unsigned int Imath_3_0__Vec3_short___op_isub(
    Imath_V3s_t * this_
    , Imath_V3s_t const * * return_
    , Imath_V3s_t const * v);