openexr-sys/src/imath_vec.rs


pub fn Imath_3_0__Vec2_long___op_mul_1(this_: *const Imath_V2i64_t, return_: *mut Imath_V2i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec2_long___op_idiv(this_: *mut Imath_V2i64_t, return_: *mut *const Imath_V2i64_t, v: *const Imath_V2i64_t) -> Exception;

pub fn Imath_3_0__Vec2_long___op_idiv_1(this_: *mut Imath_V2i64_t, return_: *mut *const Imath_V2i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec2_long___op_div(this_: *const Imath_V2i64_t, return_: *mut Imath_V2i64_t, v: *const Imath_V2i64_t) -> Exception;

pub fn Imath_3_0__Vec2_long___op_div_1(this_: *const Imath_V2i64_t, return_: *mut Imath_V2i64_t, a: c_long) -> Exception;

pub fn Imath_3_0__Vec2_long__length2(this_: *const Imath_V2i64_t, return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec2_long__baseTypeLowest(return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec2_long__baseTypeMax(return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec2_long__baseTypeSmallest(return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec2_long__baseTypeEpsilon(return_: *mut c_long) -> Exception;

pub fn Imath_3_0__Vec2_long__dimensions(return_: *mut c_uint) -> Exception;

pub fn Imath_3_0__Vec2_float__index(this_: *mut Imath_V2f_t, return_: *mut *mut c_float, i: c_int) -> Exception;

pub fn Imath_3_0__Vec2_float__index_const(this_: *const Imath_V2f_t, return_: *mut *const c_float, i: c_int) -> Exception;

pub fn Imath_3_0__Vec2_float__broadcast(this_: *mut Imath_V2f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec2_float__ctor(this_: *mut Imath_V2f_t, a: c_float, b: c_float) -> Exception;

pub fn Imath_3_0__Vec2_float__ctor_1(this_: *mut Imath_V2f_t, v: *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float___assign(this_: *mut Imath_V2f_t, return_: *mut *const Imath_V2f_t, v: *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float__dtor(this_: *mut Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float__equalWithAbsError(this_: *const Imath_V2f_t, return_: *mut bool, v: *const Imath_V2f_t, e: c_float) -> Exception;

pub fn Imath_3_0__Vec2_float__equalWithRelError(this_: *const Imath_V2f_t, return_: *mut bool, v: *const Imath_V2f_t, e: c_float) -> Exception;

pub fn Imath_3_0__Vec2_float__dot(this_: *const Imath_V2f_t, return_: *mut c_float, v: *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float__cross(this_: *const Imath_V2f_t, return_: *mut c_float, v: *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float___op_iadd(this_: *mut Imath_V2f_t, return_: *mut *const Imath_V2f_t, v: *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float___op_add(this_: *const Imath_V2f_t, return_: *mut Imath_V2f_t, v: *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float___op_isub(this_: *mut Imath_V2f_t, return_: *mut *const Imath_V2f_t, v: *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float___op_sub(this_: *const Imath_V2f_t, return_: *mut Imath_V2f_t, v: *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float___op_sub_1(this_: *const Imath_V2f_t, return_: *mut Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float__negate(this_: *mut Imath_V2f_t, return_: *mut *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float___op_imul(this_: *mut Imath_V2f_t, return_: *mut *const Imath_V2f_t, v: *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float___op_imul_1(this_: *mut Imath_V2f_t, return_: *mut *const Imath_V2f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec2_float___op_mul(this_: *const Imath_V2f_t, return_: *mut Imath_V2f_t, v: *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float___op_mul_1(this_: *const Imath_V2f_t, return_: *mut Imath_V2f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec2_float___op_idiv(this_: *mut Imath_V2f_t, return_: *mut *const Imath_V2f_t, v: *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float___op_idiv_1(this_: *mut Imath_V2f_t, return_: *mut *const Imath_V2f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec2_float___op_div(this_: *const Imath_V2f_t, return_: *mut Imath_V2f_t, v: *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float___op_div_1(this_: *const Imath_V2f_t, return_: *mut Imath_V2f_t, a: c_float) -> Exception;

pub fn Imath_3_0__Vec2_float__length(this_: *const Imath_V2f_t, return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec2_float__length2(this_: *const Imath_V2f_t, return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec2_float__normalize(this_: *mut Imath_V2f_t, return_: *mut *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float__normalizeExc(this_: *mut Imath_V2f_t, return_: *mut *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float__normalizeNonNull(this_: *mut Imath_V2f_t, return_: *mut *const Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float__normalized(this_: *const Imath_V2f_t, return_: *mut Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float__normalizedExc(this_: *const Imath_V2f_t, return_: *mut Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float__normalizedNonNull(this_: *const Imath_V2f_t, return_: *mut Imath_V2f_t) -> Exception;

pub fn Imath_3_0__Vec2_float__baseTypeLowest(return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec2_float__baseTypeMax(return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec2_float__baseTypeSmallest(return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec2_float__baseTypeEpsilon(return_: *mut c_float) -> Exception;

pub fn Imath_3_0__Vec2_float__dimensions(return_: *mut c_uint) -> Exception;

pub fn Imath_3_0__Vec2_double__index(this_: *mut Imath_V2d_t, return_: *mut *mut c_double, i: c_int) -> Exception;

pub fn Imath_3_0__Vec2_double__index_const(this_: *const Imath_V2d_t, return_: *mut *const c_double, i: c_int) -> Exception;

pub fn Imath_3_0__Vec2_double__broadcast(this_: *mut Imath_V2d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec2_double__ctor(this_: *mut Imath_V2d_t, a: c_double, b: c_double) -> Exception;

pub fn Imath_3_0__Vec2_double__ctor_1(this_: *mut Imath_V2d_t, v: *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double___assign(this_: *mut Imath_V2d_t, return_: *mut *const Imath_V2d_t, v: *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double__dtor(this_: *mut Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double__equalWithAbsError(this_: *const Imath_V2d_t, return_: *mut bool, v: *const Imath_V2d_t, e: c_double) -> Exception;

pub fn Imath_3_0__Vec2_double__equalWithRelError(this_: *const Imath_V2d_t, return_: *mut bool, v: *const Imath_V2d_t, e: c_double) -> Exception;

pub fn Imath_3_0__Vec2_double__dot(this_: *const Imath_V2d_t, return_: *mut c_double, v: *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double__cross(this_: *const Imath_V2d_t, return_: *mut c_double, v: *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double___op_iadd(this_: *mut Imath_V2d_t, return_: *mut *const Imath_V2d_t, v: *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double___op_add(this_: *const Imath_V2d_t, return_: *mut Imath_V2d_t, v: *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double___op_isub(this_: *mut Imath_V2d_t, return_: *mut *const Imath_V2d_t, v: *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double___op_sub(this_: *const Imath_V2d_t, return_: *mut Imath_V2d_t, v: *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double___op_sub_1(this_: *const Imath_V2d_t, return_: *mut Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double__negate(this_: *mut Imath_V2d_t, return_: *mut *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double___op_imul(this_: *mut Imath_V2d_t, return_: *mut *const Imath_V2d_t, v: *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double___op_imul_1(this_: *mut Imath_V2d_t, return_: *mut *const Imath_V2d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec2_double___op_mul(this_: *const Imath_V2d_t, return_: *mut Imath_V2d_t, v: *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double___op_mul_1(this_: *const Imath_V2d_t, return_: *mut Imath_V2d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec2_double___op_idiv(this_: *mut Imath_V2d_t, return_: *mut *const Imath_V2d_t, v: *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double___op_idiv_1(this_: *mut Imath_V2d_t, return_: *mut *const Imath_V2d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec2_double___op_div(this_: *const Imath_V2d_t, return_: *mut Imath_V2d_t, v: *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double___op_div_1(this_: *const Imath_V2d_t, return_: *mut Imath_V2d_t, a: c_double) -> Exception;

pub fn Imath_3_0__Vec2_double__length(this_: *const Imath_V2d_t, return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec2_double__length2(this_: *const Imath_V2d_t, return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec2_double__normalize(this_: *mut Imath_V2d_t, return_: *mut *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double__normalizeExc(this_: *mut Imath_V2d_t, return_: *mut *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double__normalizeNonNull(this_: *mut Imath_V2d_t, return_: *mut *const Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double__normalized(this_: *const Imath_V2d_t, return_: *mut Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double__normalizedExc(this_: *const Imath_V2d_t, return_: *mut Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double__normalizedNonNull(this_: *const Imath_V2d_t, return_: *mut Imath_V2d_t) -> Exception;

pub fn Imath_3_0__Vec2_double__baseTypeLowest(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec2_double__baseTypeMax(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec2_double__baseTypeSmallest(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec2_double__baseTypeEpsilon(return_: *mut c_double) -> Exception;

pub fn Imath_3_0__Vec2_double__dimensions(return_: *mut c_uint) -> Exception;

pub fn Imath_3_0__Vec3_short__index(this_: *mut Imath_V3s_t, return_: *mut *mut c_short, i: c_int) -> Exception;

pub fn Imath_3_0__Vec3_short__index_const(this_: *const Imath_V3s_t, return_: *mut *const c_short, i: c_int) -> Exception;

pub fn Imath_3_0__Vec3_short__ctor(this_: *mut Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short__ctor_1(this_: *mut Imath_V3s_t, a: c_short) -> Exception;

pub fn Imath_3_0__Vec3_short__ctor_2(this_: *mut Imath_V3s_t, a: c_short, b: c_short, c: c_short) -> Exception;

pub fn Imath_3_0__Vec3_short__ctor_3(this_: *mut Imath_V3s_t, v: *const Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short___assign(this_: *mut Imath_V3s_t, return_: *mut *const Imath_V3s_t, v: *const Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short__dtor(this_: *mut Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short__getValue(this_: *mut Imath_V3s_t, return_: *mut *mut c_short) -> Exception;

pub fn Imath_3_0__Vec3_short__getValue_1(this_: *const Imath_V3s_t, return_: *mut *const c_short) -> Exception;

pub fn Imath_3_0__Vec3_short__equalWithAbsError(this_: *const Imath_V3s_t, return_: *mut bool, v: *const Imath_V3s_t, e: c_short) -> Exception;

pub fn Imath_3_0__Vec3_short__equalWithRelError(this_: *const Imath_V3s_t, return_: *mut bool, v: *const Imath_V3s_t, e: c_short) -> Exception;

pub fn Imath_3_0__Vec3_short__dot(this_: *const Imath_V3s_t, return_: *mut c_short, v: *const Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short__cross(this_: *const Imath_V3s_t, return_: *mut Imath_V3s_t, v: *const Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short___op_iadd(this_: *mut Imath_V3s_t, return_: *mut *const Imath_V3s_t, v: *const Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short___op_add(this_: *const Imath_V3s_t, return_: *mut Imath_V3s_t, v: *const Imath_V3s_t) -> Exception;

pub fn Imath_3_0__Vec3_short___op_isub(this_: *mut Imath_V3s_t, return_: *mut *const Imath_V3s_t, v: *const Imath_V3s_t) -> Exception;
